# minesweeper

./: .gitignore  README.md  index.html  package-lock.json  package.json  tcpserver  tsconfig.app.json  vite.config.ts
public/: bomb.svgZone.Identifier
server/: Makefile  db.txt  dbg.h  minesweeper  minesweeper.c  server  server.c  server.js
server/minesweeper/: minesweeper.c  minesweeper.h
server/reverse-proxy/: Cargo.toml
server/reverse-proxy/src/: main.rs
server/reverse-proxy/src/tcp_messages/: mod.rs
server/rooms/: rooms  rooms.c  rooms.h
src/: main.tsx  routeTree.gen.ts  types.ts
src/components/contexts/: auth-context.tsx  websocket-content.tsx
src/components/game/: board.tsx  cell.tsx  toolTip.tsx
src/routes/: __root.tsx  index.tsx  join-room.tsx  register.tsx
src/routes/room/: $roomId.tsx
