[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
